feat: implement discovery engine, observation timestamps, and ui refinements
Backend:
- Added firstObservedAt and lastObservedAt timestamps to CatalogEntry.
- Implemented discoverySuggest for cross-field global suggestions.
- Enhanced search API to allow combining global search with filters.

UI:
- Renamed search views to 'Field Search' and 'Discovery Engine'.
- Implemented immediate autocomplete and term highlighting in suggestions.
- Added explicit search triggers and keyboard navigation for results.
- Added observation timestamps to results table and detail panel.
- Fixed upload persistence bug and added metadata preservation for batches.
- Corrected API endpoint mapping and metadata prefixing.